--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Website</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     <div class="hero"></div> <!--left div because changing to section seemed to break functionality, also it seems to deal more with styling so a div should be appropriate-->
     <main class="content">
         <section class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img alt="People working" src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
